# azer

./: .gitignore  .gn  README.md
azer/render_system/d3d11/: BUILD.gn  depth_buffer.cc  depth_buffer.h  enum_transform.h  gpu_program.cc  hr_msg.cc  hr_msg.h  indices_buffer.cc  indices_buffer.h  overlay.cc  overlay.h  plugin.cc  plugin.h  render_system.cc  render_system.h  render_target.cc  render_target.h  renderer.cc  renderer.h  swap_chain.cc  swap_chain.h  texture.cc  texture.h  util.cc  util.h  vertex_buffer.cc  vertex_buffer.h
azer/ui/widget/: BUILD.gn  all.h  canvas.cc  canvas.h  context.cc  context.h  control.h  label.cc  label.h  painter.cc  painter.h  panel.cc  panel.h  root_window.cc  root_window.h  style.cc  style.h  theme.cc  theme.h  widget.cc  widget.h  widget_all.h  widget_host.cc  widget_host.h  widget_manager.h  widget_observer.h  window.cc  window.h
azer/util/: BUILD.gn  ilimage_wrapper.cc  ilimage_wrapper.h  image.cc  image.h  sampleapp.cc  sampleapp.h  tile.cc  tile.h  tile_test.cc  util.h
base/: BUILD.gn  base.cc  base.h  logging.cc  test_main.cc
base/i18n/: icu_util.cc
base/strings/: string_number_conversions.h
base/yanglei/: .bash_history  .bashrc  .gitconfig  .lesshst  .minttyrc  .netrc
base/yanglei/.ssh/: known_hosts
samples/: BUILD.gn
samples/basic/camera/: BUILD.gn  camera.afx  main.cc
samples/basic/fps/: BUILD.gn  diffuse.afx  main.cc
samples/basic/hierarchy/: BUILD.gn  diffuse.afx  main.cc
samples/basic/indices/: BUILD.gn  main.cc
samples/basic/lockvb/: BUILD.gn  diffuse.afx  main.cc
samples/basic/mesh/: BUILD.gn  main.cc
samples/basic/meshtrans/: BUILD.gn  main.cc
samples/basic/scene/: BUILD.gn  diffuse.afx  main.cc
samples/basic/texture/: BUILD.gn  main.cc
samples/basic/transform/: BUILD.gn  main.cc  transform.afx
samples/basic/triangle/: BUILD.gn  main.cc
samples/basic/trianglestrip/: BUILD.gn  main.cc
samples/basic/wxwidget/: BUILD.gn  azer_canvas.cc  azer_canvas.h  diffuse.afx  main.cc
samples/basic/xfile/: BUILD.gn  main.cc
samples/common/: camera_control.cc  common.h
samples/lights/: README
samples/resources/material/: base.mtrl  hierarchy.mtrl
samples/resources/mesh/: bone.afxm  cube.afxm  plane01.afxm  sphere.afxm  sphere1.afxm  sphere2.afxm
samples/resources/scene/: example.sce  hierarchy.sce
samples/resources/texture/: icebump01.dds
samples/resources/vdesc/: base.vdesc
samples/texture/: README
samples/texture/multitexture2/: README
sandbox/azer/: BUILD.gn
sandbox/azer/billboard/: ground.vs.hlsl  main.cc
sandbox/azer/blending/: main.cc
sandbox/azer/bumpmap/: .#objmesh.h  main.cc  ps.hlsl
sandbox/azer/colored/: main.cc  ps.hlsl
sandbox/azer/common/: aabb.cc  aabb.h  aabb.ps.hlsl  aabb.vs.hlsl  billboard.cc  billboard.gs.hlsl  billboard.h  billboard.ps.hlsl  billboard.vs.hlsl  camera.h  camera2.h  config.h  grid.cc  grid.h  grid.ps.hlsl  grid.vs.hlsl  heightmap.cc  loadobj.cc  loadobj.h  md5loader.cc  md5loader.h  normal_render.cc  normal_render.h  nps.hlsl  nvs.hlsl  raymesh.cc  raymesh.h  raymesh.ps.hlsl  sky.ps.hlsl  sky.vs.hlsl  skysphere.cc  skysphere.h  util.cc  util.h
sandbox/azer/fpcamera/: delegate.cc  delegate.h  main.cc
sandbox/azer/heightmaps/: delegate.cc  delegate.h  main.cc
sandbox/azer/indices/: main.cc  vs.hlsl
sandbox/azer/init/: main.cc
sandbox/azer/instance/: leaf.vs.hlsl  main.cc  tree.ps.hlsl  tree_mesh.cc  tree_mesh.h
sandbox/azer/loadobj/: main.cc
sandbox/azer/md5/: bottle.ps.hlsl  ground.ps.hlsl  main.cc  md5.ps.hlsl
sandbox/azer/media/: boy.md5anim  boy.md5mesh  ground.mtl  spaceCompound.mtl  tree.mtl
sandbox/azer/objmodel/: main.cc  mesh.cc  mesh.h  ps.hlsl
sandbox/azer/picking/: bottle.vs.hlsl  main.cc
sandbox/azer/pixelclip/: main.cc  ps.hlsl  vs.hlsl
sandbox/azer/renderstate/: main.cc  vs.hlsl
sandbox/azer/rendertarget/: delegate.cc  delegate.h  main.cc
sandbox/azer/simplelight/: data.cc  data.h  main.cc
sandbox/azer/simplelight2/: main.cc
sandbox/azer/skia/: delegate.cc  delegate.h  main.cc
sandbox/azer/skybox/: delegate.cc  delegate.h  main.cc  ps.hlsl
sandbox/azer/spotlight/: delegate.cc  delegate.h  main.cc  ps.hlsl  vs.hlsl
sandbox/azer/texture/: main.cc  ps.hlsl
sandbox/azer/transform/: main.cc
sandbox/azer/triangle/: main.cc
sandbox/azer/wvp/: main.cc
sandbox/azer/xna/: main.cc
sandbox/rastertek/: BUILD.gn
sandbox/skia/: BUILD.gn  helloworld.cc  png.cc
sandbox/skia/samples/: BUILD.gn
sandbox/ui/: BUILD.gn
sandbox/ui/cube/: main.cc  ps.hlsl
sandbox/ui/gfx_canvas/: main.cc
sandbox/ui/png/: main.cc
sandbox/ui/surface/: delegate.cc  delegate.h  main.cc
sandbox/ui/widget/: delegate.cc  delegate.h  main.cc  surface.vs.hlsl
sandbox/wxwidget/: BUILD.gn
sandbox/wxwidget/aui/: BUILD.gn  main.cc
sandbox/wxwidget/caret/: BUILD.gn  main.cc
sandbox/wxwidget/collpanel/: BUILD.gn  main.cc
sandbox/wxwidget/combo/: BUILD.gn  main.cc
sandbox/wxwidget/controls/: BUILD.gn  main.cc
sandbox/wxwidget/dataview/: BUILD.gn  dataview.cpp
sandbox/wxwidget/debugrpt/: BUILD.gn  main.cc
sandbox/wxwidget/dialogs/: BUILD.gn  dialogs.cpp  dialogs.h
skia/: BUILD.gn
skia/ext/: analysis_canvas.cc  analysis_canvas.h  benchmarking_canvas.cc  bitmap_platform_device_skia.cc  lazy_pixel_ref_utils.cc
ui/events/: BUILD.gn  device_data_manager.cc  device_data_manager.h  event.cc  event.h  event_constants.h  event_dispatcher.cc  event_dispatcher.h  event_dispatcher_unittest.cc  event_handler.cc  event_handler.h  event_processor.cc  event_processor.h  event_rewriter.h  event_source.cc  event_source.h  event_switches.cc  event_switches.h  event_target.cc  event_target.h  event_target_iterator.h  event_targeter.cc  event_targeter.h  event_unittest.cc  event_utils.cc  event_utils.h  events_base_export.h  events_export.h  gesture_curve.h  gesture_event_details.cc  gesture_event_details.h  input_device.cc  input_device.h  input_device_event_observer.h  keyboard_device.cc  keyboard_device.h  latency_info.cc  latency_info.h
ui/gfx/: BUILD.gn  canvas.cc  canvas.h  text_elider.cc  text_elider.h
(+373 files in other folders)
