custom("gen_build_info") {
  base_gen_dir = rebase_path(target_gen_dir, ".", "root_build_dir")
  script = "//build/tools/shell/azer_buildinfo.py"
  hard_dep = true
  outputs = [
    "$base_gen_dir/build_info.h"
    "$base_gen_dir/build_info.cc"
  ]
  args = [
    base_gen_dir
    "build_info"
  ]
}

source_set("build_info") {
  hard_dep = true
  source_dir = rebase_path(target_gen_dir, root_build_dir, ".")
  base_gen_dir = rebase_path(root_gen_dir, ".", root_build_dir)
  sources = [
    "$source_dir/build_info.h"
    "$source_dir/build_info.cc"
  ]
  include_dirs = ["$base_gen_dir"]
  deps = [":gen_build_info"]
}

component("base") {
  sources = [
    "../build/build_config.h",
    "third_party/dmg_fp/dmg_fp.h",
    "third_party/dmg_fp/g_fmt.cc",
    "third_party/dmg_fp/dtoa_wrapper.cc",
    "third_party/icu/icu_utf.cc",
    "third_party/icu/icu_utf.h",
    "at_exit.cc",
    "at_exit.h",
    "atomic_ref_count.h",
    "atomic_sequence_num.h",
    "atomicops.h",
    "atomicops_internals_gcc.h",
    "atomicops_internals_mac.h",
    "atomicops_internals_tsan.h",
    "atomicops_internals_x86_gcc.cc",
    "atomicops_internals_x86_gcc.h",
    "atomicops_internals_x86_msvc.h",
    "base_export.h",
    "base_paths.cc",
    "base_paths.h",
    "base_paths_android.cc",
    "base_paths_android.h",
    "base_paths_mac.h",
    "base_paths_mac.mm",
    "base_paths_posix.cc",
    "base_paths_posix.h",
    "base_paths_win.cc",
    "base_paths_win.h",
    "base64.cc",
    "base64.h",
    "basictypes.h",
    "bind.h",
    "bind_helpers.cc",
    "bind_helpers.h",
    "bind_internal.h",
    "bind_internal_win.h",
    "bits.h",
    "build_time.cc",
    "build_time.h"
    "callback.h",
    "callback_helpers.h",
    "callback_helpers.cc",
    "callback_internal.cc",
    "callback_internal.h",
    "cancelable_callback.h",
    "command_line.cc",
    "command_line.h"
    "compiler_specific.h",
    "containers/hash_tables.h",
    "containers/linked_list.h",
    "containers/mru_cache.h",
    "containers/small_map.h",
    "containers/stack_container.h",
    "cpu.cc",
    "cpu.h",
    "critical_closure.h",
    "critical_closure_ios.mm",
    "debug/alias.cc",
    "debug/alias.h",
    "debug/crash_logging.cc",
    "debug/crash_logging.h",
    "debug/debug_on_start_win.cc",
    "debug/debug_on_start_win.h",
    "debug/debugger.cc",
    "debug/debugger.h",
    "debug/debugger_posix.cc",
    "debug/debugger_win.cc",
    # This file depends on files from the "allocator" target,
    # but this target does not depend on "allocator" (see
    # allocator.gyp for details).
    "debug/leak_annotations.h",
    "debug/leak_tracker.h",
    "debug/proc_maps_linux.cc",
    "debug/proc_maps_linux.h",
    "debug/profiler.cc",
    "debug/profiler.h",
    "debug/stack_trace.cc",
    "debug/stack_trace.h",
    "debug/stack_trace_android.cc",
    "debug/stack_trace_ios.mm",
    "debug/stack_trace_posix.cc",
    "debug/stack_trace_win.cc",
    "debug/trace_event.h",
    "debug/trace_event_android.cc",
    "debug/trace_event_impl.cc",
    "debug/trace_event_impl.h",
    "debug/trace_event_impl_constants.cc",
    "debug/trace_event_system_stats_monitor.cc"
    "debug/trace_event_system_stats_monitor.h"
    "debug/trace_event_memory.cc",
    "debug/trace_event_memory.h",
    "debug/trace_event_win.cc"
    "environment.cc",
    "environment.h",
    "file_descriptor_posix.h",
    "file_util.cc",
    "file_util.h",
    "file_util_android.cc",
    "file_util_linux.cc",
    "file_util_mac.mm",
    "file_util_posix.cc",
    "file_util_win.cc",
    "file_version_info.h",
    "file_version_info_mac.h",
    "file_version_info_mac.mm",
    "file_version_info_win.cc",
    "file_version_info_win.h",
    "files/dir_reader_fallback.h",
    "files/dir_reader_linux.h",
    "files/dir_reader_posix.h",
    "files/file_enumerator.cc",
    "files/file_enumerator.h",
    "files/file_enumerator_posix.cc",
    "files/file_enumerator_win.cc",
    "files/file_path.cc",
    "files/file_path.h",
    "files/file_path_constants.cc",
    "files/file_path_watcher.cc",
    "files/file_path_watcher.h",
    "files/file_path_watcher_kqueue.cc",
    "files/file_path_watcher_linux.cc",
    "files/file_path_watcher_stub.cc",
    "files/file_path_watcher_win.cc",
    "files/file_util_proxy.cc",
    "files/file_util_proxy.h",
    "files/file.cc"
    "files/file_posix.cc"
    "files/file_win.cc"
    "files/important_file_writer.h",
    "files/important_file_writer.cc",
    "files/memory_mapped_file.cc",
    "files/memory_mapped_file.h",
    "files/memory_mapped_file_posix.cc",
    "files/memory_mapped_file_win.cc",
    "files/scoped_temp_dir.cc",
    "files/scoped_temp_dir.h",
    "float_util.h",
    "format_macros.h",
    "gtest_prod_util.h",
    "guid.cc",
    "guid.h",
    "guid_posix.cc",
    "guid_win.cc",
    "hash.cc",
    "hash.h",
    "id_map.h",
    "ini_parser.cc",
    "ini_parser.h",
    "json/json_file_value_serializer.cc",
    "json/json_file_value_serializer.h",
    "json/json_parser.cc",
    "json/json_parser.h",
    "json/json_reader.cc",
    "json/json_reader.h",
    "json/json_string_value_serializer.cc",
    "json/json_string_value_serializer.h",
    "json/json_value_converter.h",
    "json/json_writer.cc",
    "json/json_writer.h",
    "json/string_escape.cc",
    "json/string_escape.h",
    "lazy_instance.cc",
    "lazy_instance.h",
    "location.cc",
    "location.h",
    "logging.cc",
    "logging.h",
    "logging_win.cc",
    "logging_win.h",
    "memory/aligned_memory.cc",
    "memory/aligned_memory.h",
    "memory/discardable_memory_android.h"
    "memory/discardable_memory_emulated.cc"
    "memory/discardable_memory_emulated.h"
    "memory/discardable_memory_linux.cc"
    "memory/discardable_memory_mac.cc"
    "memory/discardable_memory_provider.cc"
    "memory/discardable_memory_provider.h"
    "memory/discardable_memory_win.cc"
    "memory/linked_ptr.h",
    "memory/manual_constructor.h",
    "memory/memory_pressure_listener.cc",
    "memory/memory_pressure_listener.h",
    "memory/raw_scoped_refptr_mismatch_checker.h",
    "memory/ref_counted.cc",
    "memory/ref_counted.h",
    "memory/ref_counted_delete_on_message_loop.h",
    "memory/ref_counted_memory.cc",
    "memory/ref_counted_memory.h",
    "memory/scoped_handle.h",
    "memory/scoped_open_process.h",
    "memory/scoped_policy.h",
    "memory/scoped_ptr.h",
    "memory/scoped_vector.h",
    "memory/shared_memory.h",
    "memory/shared_memory_android.cc",
    "memory/shared_memory_nacl.cc",
    "memory/shared_memory_posix.cc",
    "memory/shared_memory_win.cc",
    "memory/singleton.cc",
    "memory/singleton.h",
    "memory/weak_ptr.cc",
    "memory/weak_ptr.h",
    "message_loop/incoming_task_queue.cc",
    "message_loop/incoming_task_queue.h",
    "message_loop/message_loop.cc",
    "message_loop/message_loop.h",
    "message_loop/message_loop_proxy.cc",
    "message_loop/message_loop_proxy.h",
    "message_loop/message_loop_proxy_impl.cc",
    "message_loop/message_loop_proxy_impl.h",
    "message_loop/message_pump.cc",
    "message_loop/message_pump.h",
    "message_loop/message_pump_android.cc",
    "message_loop/message_pump_android.h",
    "message_loop/message_pump_default.cc",
    "message_loop/message_pump_default.h",
    "message_loop/message_pump_glib.cc",
    "message_loop/message_pump_glib.h",
    "message_loop/message_pump_gtk.cc",
    "message_loop/message_pump_gtk.h",
    "message_loop/message_pump_io_ios.cc",
    "message_loop/message_pump_io_ios.h",
    "message_loop/message_pump_libevent.cc",
    "message_loop/message_pump_libevent.h",
    "message_loop/message_pump_mac.h",
    "message_loop/message_pump_mac.mm",
    "message_loop/message_pump_observer.h",
    #"message_loop/message_pump_ozone.cc",
    #"message_loop/message_pump_ozone.h",
    "message_loop/message_pump_win.cc",
    "message_loop/message_pump_win.h",
    "message_loop/message_pump_x11.cc",
    "message_loop/message_pump_x11.h",
    "metrics/field_trial.cc",
    "metrics/field_trial.h",
    "metrics/sample_map.cc",
    "metrics/sample_map.h",
    "metrics/sample_vector.cc",
    "metrics/sample_vector.h",
    "metrics/bucket_ranges.cc",
    "metrics/bucket_ranges.h",
    "metrics/histogram.cc",
    "metrics/histogram.h",
    "metrics/histogram_base.cc",
    "metrics/histogram_base.h",
    "metrics/histogram_delta_serialization.cc"
    "metrics/histogram_delta_serialization.h"
    "metrics/histogram_flattener.h",
    "metrics/histogram_samples.cc",
    "metrics/histogram_samples.h",
    "metrics/histogram_snapshot_manager.cc",
    "metrics/histogram_snapshot_manager.h",
    "metrics/sparse_histogram.cc",
    "metrics/sparse_histogram.h",
    "metrics/statistics_recorder.cc",
    "metrics/statistics_recorder.h",
    "metrics/stats_counters.cc",
    "metrics/stats_counters.h",
    "metrics/stats_table.cc",
    "metrics/stats_table.h",
    "move.h",
    "native_library.h",
    "native_library_mac.mm",
    "native_library_posix.cc",
    "native_library_win.cc",
    "observer_list.h",
    "observer_list_threadsafe.h",
    "os_compat_android.cc",
    "os_compat_android.h",
    "os_compat_nacl.cc",
    "os_compat_nacl.h",
    "path_service.cc",
    "path_service.h",
    "pending_task.cc",
    "pending_task.h",
    "pickle.cc",
    "pickle.h",
    "platform_file.cc",
    "platform_file.h",
    "platform_file_posix.cc",
    "platform_file_win.cc",
    "port.h",
    "posix/eintr_wrapper.h",
    "posix/file_descriptor_shuffle.cc",
    "posix/file_descriptor_shuffle.y",
    "posix/global_descriptors.cc",
    "posix/global_descriptors.h",
    "posix/unix_domain_socket_linux.cc",
    "posix/unix_domain_socket_linux.h",
    "power_monitor/power_monitor.cc",
    "power_monitor/power_monitor.h",
    "power_monitor/power_monitor_device_source.cc",
    "power_monitor/power_monitor_device_source.h",
    "power_monitor/power_monitor_device_source_android.cc",
    "power_monitor/power_monitor_device_source_android.h",
    "power_monitor/power_monitor_device_source_ios.mm",
    "power_monitor/power_monitor_device_source_mac.mm",
    "power_monitor/power_monitor_device_source_posix.cc",
    "power_monitor/power_monitor_device_source_win.cc",
    "power_monitor/power_monitor_source.cc",
    "power_monitor/power_monitor_source.h",
    "power_monitor/power_observer.h",
    "process/internal_linux.cc",
    "process/internal_linux.h",
    "process/kill.cc",
    "process/kill.h",
    "process/kill_mac.cc",
    "process/kill_posix.cc",
    "process/kill_win.cc",
    "process/launch.cc",
    "process/launch.h",
    "process/launch_ios.cc",
    "process/launch_mac.cc",
    "process/launch_posix.cc",
    "process/launch_win.cc",
    "process/memory.h",
    "process/memory_linux.cc",
    "process/memory_mac.mm",
    "process/memory_win.cc",
    "process/process.h",
    "process/process_handle_freebsd.cc",
    "process/process_handle_linux.cc",
    "process/process_handle_mac.cc",
    "process/process_handle_openbsd.cc",
    "process/process_handle_posix.cc",
    "process/process_handle_win.cc",
    "process/process_info.h",
    "process/process_info_mac.cc",
    "process/process_info_win.cc",
    "process/process_iterator.cc",
    "process/process_iterator.h",
    "process/process_iterator_freebsd.cc",
    "process/process_iterator_linux.cc",
    "process/process_iterator_mac.cc",
    "process/process_iterator_openbsd.cc",
    "process/process_iterator_win.cc",
    "process/process_linux.cc",
    "process/process_metrics.h",
    "process/process_metrics.cc",
    "process/process_metrics_freebsd.cc",
    "process/process_metrics_ios.cc",
    "process/process_metrics_linux.cc",
    "process/process_metrics_mac.cc",
    "process/process_metrics_openbsd.cc",
    "process/process_metrics_posix.cc",
    "process/process_metrics_win.cc",
    "process/process_posix.cc",
    "process/process_util.h",
    "process/process_win.cc",
    "profiler/scoped_profile.cc",
    "profiler/scoped_profile.h",
    "profiler/alternate_timer.cc",
    "profiler/alternate_timer.h",
    "profiler/tracked_time.cc",
    "profiler/tracked_time.h",
    "rand_util.cc",
    "rand_util.h",
    "rand_util_nacl.cc",
    "rand_util_posix.cc",
    "rand_util_win.cc",
    "run_loop.cc",
    "run_loop.h",
    "safe_numerics.h",
    "safe_strerror_posix.cc",
    "safe_strerror_posix.h",
    "scoped_native_library.cc",
    "scoped_native_library.h",
    "sequence_checker.h",
    "sequence_checker_impl.cc",
    "sequence_checker_impl.h",
    "sequenced_task_runner.cc",
    "sequenced_task_runner.h",
    "sequenced_task_runner_helpers.h",
    "sha1.h",
    "sha1_portable.cc",
    "sha1_win.cc",
    "single_thread_task_runner.h",
    "strings/latin1_string_conversions.cc"
    "strings/latin1_string_conversions.h"
    "strings/nullable_string16.cc"
    "strings/nullable_string16.h"
    "strings/safe_sprintf.cc"
    "strings/safe_sprintf.h"
    "strings/string16.cc"
    "strings/string16.h"
    "strings/stringize_macros.h"
    "strings/stringprintf.cc"
    "strings/stringprintf.h"
    "strings/stringprintf_unittest.cc"
    "strings/string_number_conversions.cc"
    "strings/string_number_conversions.h"
    "strings/string_piece.cc"
    "strings/string_piece.h"
    "strings/string_split.cc"
    "strings/string_split.h"
    "strings/string_tokenizer.h"
    "strings/string_util.cc"
    "strings/string_util.h"
    "strings/string_util_constants.cc"
    "strings/string_util_posix.h"
    "strings/string_util_win.h"
    "strings/sys_string_conversions.h"
    "strings/sys_string_conversions_posix.cc"
    "strings/sys_string_conversions_win.cc"
    "strings/utf_offset_string_conversions.cc"
    "strings/utf_offset_string_conversions.h"
    "strings/utf_string_conversions.cc"
    "strings/utf_string_conversions.h"
    "strings/utf_string_conversion_utils.cc"
    "strings/utf_string_conversion_utils.h"
    "synchronization/cancellation_flag.cc",
    "synchronization/cancellation_flag.h",
    "synchronization/condition_variable.h",
    "synchronization/condition_variable_posix.cc",
    "synchronization/condition_variable_win.cc",
    "synchronization/lock.cc",
    "synchronization/lock.h",
    "synchronization/lock_impl.h",
    "synchronization/lock_impl_posix.cc",
    "synchronization/lock_impl_win.cc",
    "synchronization/spin_wait.h",
    "synchronization/waitable_event.h",
    "synchronization/waitable_event_posix.cc",
    "synchronization/waitable_event_watcher.h",
    "synchronization/waitable_event_watcher_posix.cc",
    "synchronization/waitable_event_watcher_win.cc",
    "synchronization/waitable_event_win.cc",
    "system_monitor/system_monitor.cc",
    "system_monitor/system_monitor.h",
    "sys_byteorder.h",
    "sys_info.cc",
    "sys_info.h",
    "sys_info_android.cc",
    "sys_info_chromeos.cc",
    "sys_info_freebsd.cc",
    "sys_info_ios.mm",
    "sys_info_linux.cc",
    "sys_info_mac.cc",
    "sys_info_openbsd.cc",
    "sys_info_posix.cc",
    "sys_info_win.cc",
    "task_runner.cc",
    "task_runner.h",
    "task_runner_util.h",
    "template_util.h",
    "thread_task_runner_handle.cc",
    "thread_task_runner_handle.h",
    "threading/non_thread_safe.h",
    "threading/non_thread_safe_impl.cc",
    "threading/non_thread_safe_impl.h",
    "threading/platform_thread.h",
    "threading/platform_thread_android.cc",
    "threading/platform_thread_linux.cc",
    "threading/platform_thread_mac.mm",
    "threading/platform_thread_posix.cc",
    "threading/platform_thread_win.cc",
    "threading/post_task_and_reply_impl.cc",
    "threading/post_task_and_reply_impl.h",
    "threading/sequenced_worker_pool.cc",
    "threading/sequenced_worker_pool.h",
    "threading/simple_thread.cc",
    "threading/simple_thread.h",
    "threading/thread.cc",
    "threading/thread.h",
    "threading/thread_checker.h",
    "threading/thread_checker_impl.cc",
    "threading/thread_checker_impl.h",
    "threading/thread_collision_warner.cc",
    "threading/thread_collision_warner.h",
    "threading/thread_id_name_manager.cc",
    "threading/thread_id_name_manager.h",
    "threading/thread_local.h",
    "threading/thread_local_posix.cc",
    "threading/thread_local_storage.cc",
    "threading/thread_local_storage.h",
    "threading/thread_local_storage_posix.cc",
    "threading/thread_local_storage_win.cc",
    "threading/thread_local_win.cc",
    "threading/thread_restrictions.h",
    "threading/thread_restrictions.cc",
    "threading/watchdog.cc",
    "threading/watchdog.h",
    "threading/worker_pool.h",
    "threading/worker_pool.cc",
    "threading/worker_pool_posix.cc",
    "threading/worker_pool_posix.h",
    "threading/worker_pool_win.cc",
    "time/clock.cc",
    "time/clock.h",
    "time/default_clock.cc",
    "time/default_clock.h",
    "time/default_tick_clock.cc",
    "time/default_tick_clock.h",
    "time/tick_clock.cc",
    "time/tick_clock.h",
    "time/time.cc",
    "time/time.h",
    "time/time_mac.cc",
    "time/time_posix.cc",
    "time/time_win.cc",
    "timer/elapsed_timer.cc",
    "timer/elapsed_timer.h",
    "timer/hi_res_timer_manager.h",
    "timer/hi_res_timer_manager_posix.cc",
    "timer/hi_res_timer_manager_win.cc",
    "timer/timer.cc",
    "timer/timer.h",
    "tracked_objects.cc",
    "tracked_objects.h",
    "tracking_info.cc",
    "tracking_info.h",
    "tuple.h",
    "values.cc",
    "values.h",
    "value_conversions.cc",
    "value_conversions.h",
    "version.cc",
    "version.h",
    "vlog.cc",
    "vlog.h",
    "win/enum_variant.cc",
    "win/enum_variant.h",
    "win/event_trace_consumer.h",
    "win/event_trace_controller.cc",
    "win/event_trace_controller.h",
    "win/event_trace_provider.cc",
    "win/event_trace_provider.h",
    "win/i18n.cc",
    "win/i18n.h",
    "win/iat_patch_function.cc",
    "win/iat_patch_function.h",
    "win/iunknown_impl.cc",
    "win/iunknown_impl.h",
    "win/message_window.cc",
    "win/message_window.h",
    "win/metro.cc",
    "win/metro.h",
    "win/object_watcher.cc",
    "win/object_watcher.h",
    "win/registry.cc",
    "win/registry.h",
    "win/resource_util.cc",
    "win/resource_util.h",
    "win/scoped_bstr.cc",
    "win/scoped_bstr.h",
    "win/scoped_co_mem.h",
    "win/scoped_com_initializer.h",
    "win/scoped_comptr.h",
    "win/scoped_gdi_object.h",
    "win/scoped_handle.cc",
    "win/scoped_handle.h",
    "win/scoped_hdc.h",
    "win/scoped_hglobal.h",
    "win/scoped_process_information.cc",
    "win/scoped_process_information.h",
    "win/scoped_propvariant.h",
    "win/scoped_select_object.h",
    "win/scoped_variant.cc",
    "win/scoped_variant.h",
    "win/shortcut.cc",
    "win/shortcut.h",
    "win/startup_information.cc",
    "win/startup_information.h",
    "win/text_services_message_filter.cc",
    "win/text_services_message_filter.h",
    "win/win_util.cc",
    "win/win_util.h",
    "win/windows_version.cc",
    "win/windows_version.h",
    "win/wrapped_window_proc.cc",
    "win/wrapped_window_proc.h",
  ]

  defines = ["BASE_IMPLEMENTATION"]
  sources -= "files/file_path_watcher_stub.cc"
  deps = [
    ":base_static"
    "//testing:gtest"
    "//third_party/modp_b64:modp_b64"
    "//base/third_party/dynamic_annotations:dynamic_annotations"
    "//base/third_party/nspr:nspr"
    ":build_info"
  ]

  if (is_nacl) {
    # These things would otherwise be built on a Posix build but aren't
    # supported on NaCl.
    sources -= [
      "debug/stack_trace_posix.cc",
      "files/file_enumerator_posix.cc",
      "file_util_posix.cc",
      "message_loop/message_pump_libevent.cc",
      "process/kill_posix.cc",
      "process/launch_posix.cc",
      "process/process_metrics_posix.cc",
      "process/process_posix.cc",
      "metrics/field_trial.cc",
      "native_library_posix.cc",
      "memory/shared_memory_posix.cc",
      "sync_socket_posix.cc",
      "sys_info_posix.cc",
    ]
  } else {
    # Remove nacl stuff.
    sources -= [
      "os_compat_nacl.cc",
      "os_compat_nacl.h",
      "rand_util_nacl.cc",
      "memory/shared_memory_nacl.cc",
    ]
  }

  if (is_win) {
    sources -= [
      "strings/string16.cc"
      "message_loop/message_pump_libevent.cc",
      # Not using sha1_win.cc because it may have caused a
      # regression to page cycler moz.
      "sha1_win.cc",
    ]

    if (is_component_build) {
      sources -= "debug/debug_on_start_win.cc"
    }
  }

  if (is_linux) {
  } else {
    sources -= [
      "files/file_path_watcher_kqueue.cc",
      "message_loop/message_pump_glib.cc",
      "message_loop/message_pump_glib.h",
      "message_loop/message_pump_gtk.cc",
      "message_loop/message_pump_gtk.h",
    ]
  }

  configs += "//build/config/compiler:chromium_code"
  configs -= "//build/config/compiler:no_chromium_code"
}

static_library("base_static") {
  external = true
  sources = [
    "base_switches.cc",
    "base_switches.h",
    "win/pe_image.cc",
    "win/pe_image.h",
  ]
}

component("base_i18n") {
  external = true
  sources = [
    "i18n/base_i18n_export.h",
    "i18n/bidi_line_iterator.cc",
    "i18n/bidi_line_iterator.h",
    "i18n/break_iterator.cc",
    "i18n/break_iterator.h",
    "i18n/char_iterator.cc",
    "i18n/char_iterator.h",
    "i18n/case_conversion.cc",
    "i18n/case_conversion.h",
    "i18n/file_util_icu.cc",
    "i18n/file_util_icu.h",
    "i18n/i18n_constants.cc"
    "i18n/i18n_constants.h"
    "i18n/icu_encoding_detection.cc",
    "i18n/icu_encoding_detection.h",
    "i18n/icu_string_conversions.cc",
    "i18n/icu_string_conversions.h",
    "i18n/icu_util.cc",
    "i18n/icu_util.h",
    "i18n/number_formatting.cc",
    "i18n/number_formatting.h",
    "i18n/rtl.cc",
    "i18n/rtl.h",
    "i18n/string_compare.cc",
    "i18n/string_compare.h",
    "i18n/string_search.cc",
    "i18n/string_search.h",
    "i18n/time_formatting.cc",
    "i18n/time_formatting.h",
    "i18n/timezone.cc"
    "i18n/timezone.h"
  ]
  deps = [
    ":base",
    "//base/third_party/dynamic_annotations",
    "//third_party/icu:icui18n",
    "//third_party/icu:icuuc",
  ]
  defines = ["BASE_I18N_IMPLEMENTATION"]

  if (toolkit_uses_gtk) {
    # i18n/rtl.cc uses gtk
    configs += "//build/config/linux:gtk"
  }

  configs += "//build/config/compiler:chromium_code"
  configs -= "//build/config/compiler:no_chromium_code"
}

static_library("test_support_lib") {
  sources = [
    "test/expectations/expectation.cc"
    "test/expectations/expectation.h"
    "test/expectations/parser.cc"
    "test/expectations/parser.h"
    "test/gtest_xml_util.cc"
    "test/gtest_xml_util.h"
    "test/launcher/test_launcher.cc"
    "test/launcher/test_launcher.h"
    "test/launcher/test_result.cc"
    "test/launcher/test_result.h"
    "test/launcher/test_results_tracker.cc"
    "test/launcher/test_results_tracker.h"
    "test/launcher/unit_test_launcher.cc"
    "test/launcher/unit_test_launcher.h"
    "test/launcher/unit_test_launcher_ios.cc"
    "test/mock_chrome_application_mac.h"
    "test/mock_chrome_application_mac.mm"
    "test/mock_devices_changed_observer.cc"
    "test/mock_devices_changed_observer.h"
    "test/mock_time_provider.cc"
    "test/mock_time_provider.h"
    "test/multiprocess_test.cc"
    "test/multiprocess_test.h"
    "test/multiprocess_test_android.cc"
    "test/null_task_runner.cc"
    "test/null_task_runner.h"
    "test/perf_log.cc"
    "test/perf_log.h"
    "test/perf_test_suite.cc"
    "test/perf_test_suite.h"
    "test/perf_time_logger.cc"
    "test/perf_time_logger.h"
    "test/power_monitor_test_base.cc"
    "test/power_monitor_test_base.h"
    "test/scoped_locale.cc"
    "test/scoped_locale.h"
    "test/scoped_path_override.cc"
    "test/scoped_path_override.h"
    "test/sequenced_task_runner_test_template.cc"
    "test/sequenced_task_runner_test_template.h"
    "test/sequenced_worker_pool_owner.cc"
    "test/sequenced_worker_pool_owner.h"
    "test/simple_test_clock.cc"
    "test/simple_test_clock.h"
    "test/simple_test_tick_clock.cc"
    "test/simple_test_tick_clock.h"
    "test/task_runner_test_template.cc"
    "test/task_runner_test_template.h"
    "test/test_file_util.cc"
    "test/test_file_util.h"
    "test/test_file_util_android.cc"
    "test/test_file_util_linux.cc"
    "test/test_file_util_mac.cc"
    "test/test_file_util_posix.cc"
    "test/test_file_util_win.cc"
    "test/test_listener_ios.h"
    "test/test_listener_ios.mm"
    "test/test_pending_task.cc"
    "test/test_pending_task.h"
    "test/test_process_killer_win.cc"
    "test/test_process_killer_win.h"
    "test/test_reg_util_win.cc"
    "test/test_reg_util_win.h"
    "test/test_shortcut_win.cc"
    "test/test_shortcut_win.h"
    "test/test_simple_task_runner.cc"
    "test/test_simple_task_runner.h"
    "test/test_suite.cc"
    "test/test_suite.h"
    "test/test_support_android.cc"
    "test/test_support_android.h"
    "test/test_support_ios.h"
    "test/test_support_ios.mm"
    "test/test_switches.cc"
    "test/test_switches.h"
    "test/test_timeouts.cc"
    "test/test_timeouts.h"
    "test/thread_test_helper.cc"
    "test/thread_test_helper.h"
    "test/trace_event_analyzer.cc"
    "test/trace_event_analyzer.h"
  ]

  deps = [
    ":base",
    ":base_i18n"
    ":base_static"
    "//base/third_party/dynamic_annotations",
    "//testing:gtest",
    "//testing:gmock",
    "//third_party/libxml:libxml"
  ]

  configs += "//build/config/compiler:chromium_code"
  configs -= "//build/config/compiler:no_chromium_code"
}

test("base_unittest") {
  sources = [
    "atomicops_unittest.cc"
    "at_exit_unittest.cc"
    "base64_unittest.cc"
    "bind_unittest.cc"
    "bind_unittest.nc"
    "build_time_unittest.cc"
    "callback_helpers_unittest.cc"
    "callback_list_unittest.cc"
    "callback_unittest.cc"
    "command_line_unittest.cc"
    "containers/hash_tables_unittest.cc"
    "containers/linked_list_unittest.cc"
    "containers/mru_cache_unittest.cc"
    "containers/small_map_unittest.cc"
    "containers/stack_container_unittest.cc"
    "cpu_unittest.cc"
    "debug/crash_logging_unittest.cc"
    "debug/leak_tracker_unittest.cc"
    "debug/proc_maps_linux_unittest.cc"
    "debug/stack_trace_unittest.cc"
    "debug/trace_event_memory_unittest.cc"
    "debug/trace_event_system_stats_monitor_unittest.cc"
    "debug/trace_event_unittest.cc"
    "debug/trace_event_unittest.h"
    "debug/trace_event_win_unittest.cc"
    "environment_unittest.cc"
    "files/dir_reader_posix_unittest.cc"
    "files/file_path_unittest.cc"
    "files/file_unittest.cc"
    "files/file_util_proxy_unittest.cc"
    "files/important_file_writer_unittest.cc"
    "files/scoped_temp_dir_unittest.cc"
    "file_util_unittest.cc"
    "file_version_info_unittest.cc"
    "guid_unittest.cc"
    "i18n/break_iterator_unittest.cc"
    "i18n/case_conversion_unittest.cc"
    "i18n/char_iterator_unittest.cc"
    "i18n/file_util_icu_unittest.cc"
    "i18n/icu_string_conversions_unittest.cc"
    "i18n/number_formatting_unittest.cc"
    "i18n/rtl_unittest.cc"
    "i18n/string_search_unittest.cc"
    "i18n/timezone_unittest.cc"
    "i18n/time_formatting_unittest.cc"
    "ini_parser_unittest.cc"
    "json/json_parser_unittest.cc"
    "json/json_reader_unittest.cc"
    "json/json_value_converter_unittest.cc"
    "json/json_value_serializer_unittest.cc"
    "json/json_writer_unittest.cc"
    "json/string_escape_unittest.cc"
    "lazy_instance_unittest.cc"
    "logging_unittest.cc"
    "memory/aligned_memory_unittest.cc"
    "memory/discardable_memory_allocator_android_unittest.cc"
    "memory/discardable_memory_provider_unittest.cc"
    "memory/discardable_memory_unittest.cc"
    "memory/linked_ptr_unittest.cc"
    "memory/ref_counted_memory_unittest.cc"
    "memory/ref_counted_unittest.cc"
    "memory/scoped_ptr_unittest.cc"
    "memory/scoped_vector_unittest.cc"
    "memory/shared_memory_unittest.cc"
    "memory/singleton_unittest.cc"
    "memory/weak_ptr_unittest.cc"
    "message_loop/message_loop_test.cc"
    "message_loop/message_loop_test.h"
    "message_loop/message_loop_proxy_impl_unittest.cc"
    "message_loop/message_loop_proxy_unittest.cc"
    "message_loop/message_loop_unittest.cc"
    "message_loop/message_pump_glib_unittest.cc"
    "message_loop/message_pump_io_ios_unittest.cc"
    "message_loop/message_pump_libevent_unittest.cc"
    "metrics/bucket_ranges_unittest.cc"
    "metrics/field_trial_unittest.cc"
    "metrics/histogram_base_unittest.cc"
    "metrics/histogram_delta_serialization_unittest.cc"
    "metrics/histogram_unittest.cc"
    "metrics/sample_map_unittest.cc"
    "metrics/sample_vector_unittest.cc"
    "metrics/sparse_histogram_unittest.cc"
    "metrics/statistics_recorder_unittest.cc"
    "metrics/stats_table_unittest.cc"
    "observer_list_unittest.cc"
    "os_compat_android_unittest.cc"
    "path_service_unittest.cc"
    "pickle_unittest.cc"
    "platform_file_unittest.cc"
    "posix/file_descriptor_shuffle_unittest.cc"
    "posix/unix_domain_socket_linux_unittest.cc"
    "power_monitor/power_monitor_unittest.cc"
    "process/memory_unittest.cc"
    "process/memory_unittest_mac.h"
    "process/memory_unittest_mac.mm"
    "process/process_metrics_unittest.cc"
    "process/process_metrics_unittest_ios.cc"
    "process/process_util_unittest.cc"
    "profiler/tracked_time_unittest.cc"
    "rand_util_unittest.cc"
    "safe_numerics_unittest.cc"
    "scoped_clear_errno_unittest.cc"
    "scoped_native_library_unittest.cc"
    "sequence_checker_unittest.cc"
    "sha1_unittest.cc"
    "stl_util_unittest.cc"
    "strings/nullable_string16_unittest.cc"
    "strings/safe_sprintf_unittest.cc"
    "strings/string16_unittest.cc"
    "strings/stringize_macros_unittest.cc"
    "strings/string_number_conversions_unittest.cc"
    "strings/string_piece_unittest.cc"
    "strings/string_split_unittest.cc"
    "strings/string_tokenizer_unittest.cc"
    "strings/string_util_unittest.cc"
    "strings/sys_string_conversions_unittest.cc"
    "strings/utf_offset_string_conversions_unittest.cc"
    "strings/utf_string_conversions_unittest.cc"
    "sys_info_unittest.cc"
    "task_runner_util_unittest.cc"
    "template_util_unittest.cc"
    "test/expectations/expectation_unittest.cc"
    "test/expectations/parser_unittest.cc"
    "test/run_all_unittests.cc"
    "test/test_reg_util_win_unittest.cc"
    "test/trace_event_analyzer_unittest.cc"
    "threading/non_thread_safe_unittest.cc"
    "threading/platform_thread_unittest.cc"
    "threading/sequenced_worker_pool_unittest.cc"
    "threading/simple_thread_unittest.cc"
    "threading/thread_checker_unittest.cc"
    "threading/thread_collision_warner_unittest.cc"
    "threading/thread_id_name_manager_unittest.cc"
    "threading/thread_local_storage_unittest.cc"
    "threading/thread_local_unittest.cc"
    "threading/thread_unittest.cc"
    "threading/watchdog_unittest.cc"
    "threading/worker_pool_posix_unittest.cc"
    "threading/worker_pool_unittest.cc"
    "time/pr_time_unittest.cc"
    "time/time_unittest.cc"
    "time/time_win_unittest.cc"
    "timer/hi_res_timer_manager_unittest.cc"
    "timer/timer_unittest.cc"
    "tracked_objects_unittest.cc"
    "tuple_unittest.cc"
    "values_unittest.cc"
    "version_unittest.cc"
    "vlog_unittest.cc"
    "win/enum_variant_unittest.cc"
    "win/event_trace_consumer_unittest.cc"
    "win/event_trace_controller_unittest.cc"
    "win/event_trace_provider_unittest.cc"
    "win/i18n_unittest.cc"
    "win/iunknown_impl_unittest.cc"
    "win/message_window_unittest.cc"
    "win/object_watcher_unittest.cc"
    "win/pe_image_unittest.cc"
    "win/registry_unittest.cc"
    "win/scoped_bstr_unittest.cc"
    "win/scoped_comptr_unittest.cc"
    "win/scoped_process_information_unittest.cc"
    "win/scoped_variant_unittest.cc"
    "win/shortcut_unittest.cc"
    "win/startup_information_unittest.cc"
    "win/win_util_unittest.cc"
    "win/wrapped_window_proc_unittest.cc"
  ]

  deps = [
    ":base"
    ":base_i18n"
    ":base_static"
    ":test_support_lib"
    "//testing:gtest"
    "//testing:gmock"
    "//testing:gmock_main"
    "//third_party/icu:icui18n",
  ]

  if (is_linux) {
  } else {
    sources -= [
      "message_loop/message_pump_glib_unittest.cc"
      "message_loop/message_pump_libevent_unittest.cc"
    ]
  }
  configs += "//build/config/compiler:chromium_code"
  configs -= "//build/config/compiler:no_chromium_code"
}

source_set("test_main") {
  sources = ["test_main.cc" ]
  deps = [
    "//testing:gtest"
    "//testing:gmock"
    "//base:base_i18n"
    "//base:base"
  ]
  forward_dependent_configs_from = deps
}

static_library("appinit") {
  sources = ["base.cc"]
  deps = ["//base:base", "//base:base_i18n"]
}