config("skia_ext_config") {
  defines = ["USE_SKIA_DEVICE"]
}

static_library("skia_ext") {
  sources = [
    "ext/analysis_canvas.cc",
    "ext/analysis_canvas.h",
    "ext/benchmarking_canvas.cc",
    "ext/benchmarking_canvas.h",
    "ext/bitmap_platform_device.h",
#    "ext/bitmap_platform_device_cairo.cc",
#    "ext/bitmap_platform_device_cairo.h",
    "ext/bitmap_platform_device_mac.cc",
    "ext/bitmap_platform_device_mac.h",
#    "ext/bitmap_platform_device_skia.cc",
#    "ext/bitmap_platform_device_skia.h",
    "ext/bitmap_platform_device_win.cc",
    "ext/bitmap_platform_device_win.h",
    "ext/convolver.cc",
    "ext/convolver.h",
#    "ext/convolver_mips_dspr2.cc",
#    "ext/convolver_mips_dspr2.h",
    "ext/convolver_SSE2.cc",
    "ext/convolver_SSE2.h",
    "ext/google_logging.cc",
    "ext/image_operations.cc",
    "ext/image_operations.h",
    "ext/image_operations_bench.cc",
    "ext/lazy_pixel_ref.cc",
    "ext/lazy_pixel_ref.h",
    "ext/lazy_pixel_ref_utils.cc",
    "ext/lazy_pixel_ref_utils.h",
    "ext/opacity_draw_filter.cc",
    "ext/opacity_draw_filter.h",
    "ext/paint_simplifier.cc",
    "ext/paint_simplifier.h",
    "ext/platform_canvas.cc",
    "ext/platform_canvas.h",
    "ext/platform_device.cc",
    "ext/platform_device.h",
    "ext/platform_device_linux.cc",
    "ext/platform_device_mac.cc",
    "ext/platform_device_win.cc",
    "ext/recursive_gaussian_convolution.cc",
    "ext/recursive_gaussian_convolution.h",
    "ext/refptr.h",
    "ext/SkDiscardableMemory_chrome.cc",
    "ext/SkDiscardableMemory_chrome.h",
    "ext/skia_trace_shim.h",
    "ext/skia_utils_base.cc",
    "ext/skia_utils_base.h",
    "ext/skia_utils_ios.h",
    "ext/skia_utils_ios.mm",
    "ext/skia_utils_mac.h",
    "ext/skia_utils_mac.mm",
    "ext/skia_utils_win.cc",
    "ext/skia_utils_win.h",
    "ext/SkMemory_new_handler.cpp",
    "ext/SkTypeface_fake.cpp",
    "ext/vector_canvas.cc",
    "ext/vector_canvas.h",
    "ext/vector_platform_device_emf_win.cc",
    "ext/vector_platform_device_emf_win.h",
    "ext/vector_platform_device_skia.cc",
    "ext/vector_platform_device_skia.h",
  ]
  deps = [
    "//third_party/skia/gn:skia",
    "//base:base",
  ]
  configs += ["//third_party/skia/gn:skia_internal_config"]
  direct_dependent_configs = [":skia_ext_config"]
}

test("skiaext_unittest") {
  sources = [
    "ext/analysis_canvas_unittest.cc",
    "ext/bitmap_platform_device_mac_unittest.cc",
    "ext/convolver_unittest.cc",
    "ext/image_operations_unittest.cc",
    "ext/lazy_pixel_ref_utils_unittest.cc",
    "ext/platform_canvas_unittest.cc",
    "ext/recursive_gaussian_convolution_unittest.cc",
    "ext/refptr_unittest.cc",
    "ext/skia_utils_ios_unittest.mm",
    "ext/skia_utils_mac_unittest.mm",
    "ext/vector_canvas_unittest.cc",
  ]
  deps = [
    "//base:base",
    "//base:test_main",
    "//third_party/skia/gn:skia",
    ":skia_ext",
  ]
}