import("//build/templates/afx.gni")

static_library("azer_devil_util") {
  sources = [
    "ilimage_wrapper.cc",
    "ilimage_wrapper.h",
  ]
  deps = [
    "//third_party/devil:devil",
    "//third_party/devil:devilu",
  ]
}

static_library("azer_util") {
  sources = [
    "image.cc",
    "image.h",
    "tile.cc",
    "tile.h",
  ]
  deps = [
    "//azer/render:render"
    "//azer/math:math"
    "//ui/gfx:gfx"
    ":azer_devil_util",
  ]
}