import("//build/templates/afx.gni")

static_library("azer_devil_util") {
  sources = [
    "ilimage_wrapper.cc",
    "ilimage_wrapper.h",
  ]
  deps = [
    "//third_party/devil:devil",
    "//third_party/devil:devilu",
  ]
}

static_library("azer_util") {
  sources = [
    "image.cc",
    "image.h",
    "tile.cc",
    "tile.h",
    "util.h",
  ]
  deps = [
    "//azer/render:render"
    "//azer/math:math"
    "//ui/gfx:gfx"
    ":azer_devil_util",
  ]
}

test("azer_util_unittest") {
  sources = [
    "tile_test.cc",
  ]
  deps = [
    "//azer/render:render",
    "//third_party/gtest:gtest",
    "//base:test_main",
    ":azer_util",
  ]
  if (is_win) {deps += ["//azer/render_system/d3d11:d3d11_render_system"]}
}